--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.hideMessage {
+    display: none;
+  }
+      
+  .pinMessage:hover + .hideMessage {
+    display: block;
+    color: red;
+  }
